first rewrite commit with goal of improving code quality and adding linux support; reimplemented nettt.h, added nettt.c - nettt is now a standalone library; added CMakeLists.txt for building the library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,12 @@
 cmake_minimum_required(VERSION 3.5)
 project (nettt)
 
+add_library(nettt source/nettt.c)
 add_executable (nettt_server source/server.c)
 add_executable (nettt_client source/client.c)
+
+target_link_libraries (nettt_server nettt)
+target_link_libraries (nettt_client nettt)
 
 if (WIN32)
     target_link_libraries (nettt_server ws2_32)
